// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup matches snapshot when toolbar props is not passed 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
}

.c0 *+* {
  margin-left: 4px;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`ButtonGroup matches snapshot when toolbar props is passed 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  padding: 0px 8px;
}

.c0 *+* {
  margin-left: 4px;
}

<div
    class="c0"
  />
</DocumentFragment>
`;
